# DeepFinder

./: .editorconfig  .gitattributes  .gitignore  .spi.yml  .swift-format  .swiftlint.yml  .xctestplan  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  PRODUCT.toml  Package.swift  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md
.claude/agents/: swift-security-reviewer.md
.codegraph/: daemon.pid
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
App/: Info.plist
Resources/: DeepFinder.sdef
Sources/AI/: AIConfig.swift  AIContext.swift  AIModelProvider.swift  AnthropicProvider.swift  ClipboardSearch.swift  CloudEmbeddingProvider.swift  CrossLanguageSearch.swift  DeepSeekProvider.swift  EmbeddingProvider.swift  FileMetadataSummary.swift  GeminiProvider.swift  HTTPClient.swift  ImageSimilaritySearch.swift  KeychainStore.swift  LocalSpeechProvider.swift  LocalVisionProvider.swift  MatchExplainer.swift  NLEmbeddingProvider.swift  NLOperations.swift  NLSearchTranslator.swift  PromptLoader.swift  ProviderRegistry.swift  QwenProvider.swift  ResultSummarizer.swift  SearchAdvisor.swift  SecretsStore.swift  SemanticGrouper.swift  SpeechAuthorization.swift  VectorStore.swift  VisionTaggingCoordinator.swift
Sources/AppEntry/: main.swift
Sources/CIndex/: .gitignore  CFileScanner.c  CHANGELOG.md  CIndex.c  CParallelScanner.c  CTrigramIndex.c  Makefile  README.md
Sources/CLI/: ArgParser.swift  CLIMain.swift  CLIOutputWriter.swift  ConfigCommands.swift  DaemonCommands.swift  DuplicateCommand.swift  FuzzyCorrection.swift  IPCClientProtocol.swift  InstallCommands.swift  REPL.swift  REPLCommands.swift  REPLHistory.swift  ServeMode.swift  SingleShot.swift  TerminalFormatter.swift
Sources/CLIEntry/: main.swift
Sources/Daemon/: ConfigStore.swift  DaemonMain.swift  FilterStore.swift  IPCClient.swift  IPCFraming.swift  IPCProtocol.swift  IPCServer.swift  LaunchAgent.swift
Sources/DaemonEntry/: main.swift
Sources/FS/: FSEventStreamImpl.swift  FSEventWatcher.swift  FileScanner.swift  FileSystemEventStream.swift  MockEventStream.swift  VolumeManager.swift
Sources/GUI/: AccessHistory.swift  ActionPanelView.swift  AppDelegate.swift  DesignSystem.swift  EmptyStateView.swift  FeatureDiscoveryTipCard.swift  FileDetailView.swift  GlassEffectContainer.swift  GlobalHotkey.swift  HotkeyPermissionHelper.swift  IndexBuildingProgressView.swift  IndexHealthBanner.swift  IndexHealthMonitor.swift  IntelligenceGlow.swift  KeyboardHintBar.swift  OnboardingView.swift  PermissionChecker.swift  PermissionGuideView.swift  QuickLookPreview.swift  ResultCategory.swift  ResultContextMenu.swift  ResultDragView.swift  ResultRowView.swift  ResultsListState.swift  ResultsListView.swift  SearchBarView.swift  SearchFilterBar.swift  SearchHistory.swift  SearchPanelHostingController.swift  SearchPanelView.swift  SearchViewModel.swift  SettingsProviders.swift  SettingsView.swift  SettingsViewModel.swift  SettingsWindow.swift  SharePromptView.swift  SpeechOverlayView.swift  StatusBarController.swift  ToastView.swift  UpdateChecker.swift  (+1 more)
Sources/Index/: Constants.swift  ExtractedMetadata.swift  FileRecord.swift  FullSubstringMap.swift  FuzzyCorrection.swift  InMemoryIndex.swift  Logger.swift  PinyinIndex.swift  ProductConfig.swift  SortedArrayUtils.swift  Trie.swift  TrigramIndex.swift
Sources/Media/: AudioMetadataExtractor.swift  ExtractedMetadata.swift  ImageMetadataExtractor.swift  MediaMetadataIndex.swift  MetadataExtractor.swift  MetadataLoader.swift  PDFMetadataExtractor.swift  VideoMetadataExtractor.swift
Sources/Persist/: BinaryIndex.swift  IndexPersistence.swift  IndexRecovery.swift  LegacySQLiteReader.swift  PathEncryption.swift  SchemaMigrator.swift  SecretsStore.swift
Sources/Search/: AutocompleteProvider.swift  ContentScanner.swift  ContentSearchProvider.swift  DuplicateFinder.swift  FileHasher.swift  FileIndexProvider.swift  FilterPipeline.swift  PatternMatcher.swift  QueryTerm.swift  SearchBookmark.swift  SearchCoordinator.swift  SearchFilter.swift  SearchProvider.swift  SearchSorter.swift  SearchTypes.swift
Sources/Services/: HTTPSearchService.swift  SearchIntent.swift  SearchScriptCommand.swift  URLSchemeHandler.swift
Tests/AITests/: AIConfigExpansionTests.swift  AIConfigTests.swift  AIModelProviderTests.swift  AITestHelpers.swift  AnthropicProviderTests.swift  ClipboardSearchTests.swift  CloudEmbeddingProviderTests.swift  CrossLanguageSearchTests.swift  DeepSeekProviderTests.swift  EmbeddingProviderTests.swift  GeminiProviderTests.swift  (+20 more)
crates/deepfind/: Cargo.toml
crates/deepfind/src/: launchd.rs  main.rs
crates/deepfindd/: Cargo.toml
crates/deepfindd/src/: index_job.rs  lib.rs  main.rs  singleton.rs
crates/deepfindd/tests/: serve.rs
crates/df-core/: Cargo.toml
crates/df-core/benches/: query.rs  turbopfor.rs
crates/df-core/src/: boolquery.rs  candidate.rs  db.rs  db_source.rs  error.rs  lib.rs  meta.rs  query.rs  scope.rs  trigram.rs  turbopfor.rs  varint.rs
crates/df-core/tests/: boolean.rs  meta.rs  query.rs  robin_hood.rs  turbopfor_edges.rs  turbopfor_fuzz.rs  turbopfor_property.rs
crates/df-index/: Cargo.toml
crates/df-index/benches/: build.rs
crates/df-index/src/: content_build.rs  error.rs  lib.rs  manifest.rs  mmap_source.rs  overlay_store.rs  permissions.rs  registry.rs  settings.rs
crates/df-index/tests/: content_build.rs  index.rs  mmap_source.rs  settings.rs  turbopfor_db.rs
crates/df-ipc/: Cargo.toml
crates/df-ipc/src/: bfs.rs  error.rs  filter.rs  lib.rs  paths.rs  proto.rs  wire.rs
crates/df-ipc/tests/: wire.rs
docs/: API.md  BRANDING.md  COMPARISON.md  INSTALL.md  INTEGRATIONS.md  RELEASE.md  SUPPORT.md  USER_GUIDE.md  architecture.md  decisions.md  index.md  perf-baseline.md  tech-selection.md
packaging/: deepfinder.1
scripts/: build-app.sh  build.sh  check-links.py  deepfinder-reset.sh  lint.sh  run-tests.sh  test.sh  uninstall.sh  verify.sh
(+231 files in other folders)
