[workspace]
resolver = "2"
members = [
    "crates/df-core",
    "crates/df-content",
    "crates/df-index",
    "crates/df-ipc",
    "crates/deepfindd",
    "crates/deepfind",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.96"
license = "MIT"
authors = ["Nadav"]
repository = "https://github.com/nadav-cheung/DeepFinder"
description = "Fast local file search for macOS — trigram index + daemon + CLI"
homepage = "https://github.com/nadav-cheung/DeepFinder"

# Catalog of shared dependency versions. Crates opt in with `{ workspace = true }`.
[workspace.dependencies]
# Internal
df-core = { path = "crates/df-core" }
df-content = { path = "crates/df-content" }
df-index = { path = "crates/df-index" }
df-ipc = { path = "crates/df-ipc" }
deepfindd = { path = "crates/deepfindd" }

# External (used by the Step 0 scaffold; more added per build step)
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "fs", "time", "signal"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"
tempfile = "3"
bincode = { version = "2", features = ["serde"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
zstd = "0.13"
criterion = "0.5"
memmap2 = "0.9"
memchr = "2"
crossbeam-channel = "0.5"
regex = "1"
toml = "0.8"
arc-swap = "1"
notify = "6"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
# A GitHub repo to push Homebrew formulas to
tap = "nadav-cheung/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Path that installers should place binaries in
install-path = "~/.local/bin"
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
