[package]
name = "deepfind"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "deepfind"
path = "src/main.rs"

[dependencies]
df-core = { workspace = true }
df-index = { workspace = true }
df-ipc = { workspace = true }
deepfindd = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
ignore = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
