[package]
name = "deepfindd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "deepfindd"
path = "src/main.rs"

[dependencies]
df-core = { workspace = true }
df-index = { workspace = true }
df-ipc = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
