[package]
name = "deepfindd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "deepfindd"
path = "src/lib.rs"

[dependencies]
df-core = { workspace = true }
df-content = { workspace = true }
df-index = { workspace = true }
df-ipc = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
df-ipc = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
