[package]
name = "df-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "turbopfor"
harness = false
