[package]
name = "df-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
df-core = { workspace = true }
ignore = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
df-core = { workspace = true }
tempfile = { workspace = true }
