[package]
name = "df-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
df-core = { workspace = true }
df-content = { workspace = true }
crossbeam-channel = { workspace = true }
ignore = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
df-content = { workspace = true }
df-core = { workspace = true }
tempfile = { workspace = true }
